<?xml version="1.0"?>
<package format="2">
    <name>age_gender</name>
    <version>1.1.0</version>

    <description>deepface</description>
    <maintainer email="lel1132473561@126.com">lel</maintainer>
    <author email="lel1132473561@126.com">lel</author>
    <author>lel</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
	<!--
	-->
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <test_depend>roslint</test_depend>

</package>
